feat: 기본 API 기능 구현 + 단위테스트 작성